Add new translations

--- a/ISS Position/ISS Position/Other Files/en.lproj/Localizable.strings
+++ b/ISS Position/ISS Position/Other Files/en.lproj/Localizable.strings
@@ -33,3 +33,8 @@
 /********* ISSInfoService *********/
 
 "ISSInfoService.error.corrupted-data" = "There was a problem with data!";
+
+
+/********* RootPresenter *********/
+
+"RootPresenter.status-default-message" = "Houston We have a problem! Currently no status available.";
